# enen

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SPEC.md  setup  setup.bat
include/: brain_diagram.hpp  frame.hpp  game.hpp  history.hpp  layout.hpp  networks.hpp  puzzles.hpp  renderer.hpp  screens.hpp
src/: debug_test.cpp  game.cpp  game_test.cpp  main.cpp  main_autorun.cpp  net_test.cpp  renderer.cpp
